[gd_scene load_steps=9 format=3 uid="uid://dxd2yx47htqsj"]

[ext_resource type="Script" path="res://enemy.gd" id="1_itflj"]
[ext_resource type="Texture2D" uid="uid://c22vrc22md5vc" path="res://test_enemy.png" id="1_uo05l"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_swtm8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fb0gh"]
atlas = ExtResource("1_uo05l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfly4"]
atlas = ExtResource("1_uo05l")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y2a1j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_uo05l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb0gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfly4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nwxvj"]
radius = 44.7772

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0os63"]
size = Vector2(22, 27.25)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_itflj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_swtm8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y2a1j")
autoplay = "default"
frame = 2
frame_progress = 0.667219

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_nwxvj")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0, -4.375)
shape = SubResource("RectangleShape2D_0os63")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0, -2.75)
shape = SubResource("RectangleShape2D_0os63")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="PlayerDetection" method="_on_body_entered"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
